failed to build: (error ID: d54d8837): {"reason":"Missing Lock File","co

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,14 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
+/.next/
+/out/
 
 # misc
 .DS_Store
@@ -25,7 +21,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -35,4 +34,4 @@ yarn-error.log*
 next-env.d.ts
 
 # firebase
-/.firebase
+.firebase
