--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "0.378.0",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
