--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
-
 {
   "name": "med-itrack",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
